Version 0.65
  - [Altiris input] Fixed a small bug when the date is malformed.
  - [Log2Timeline library] Fixed few bugs:
      - Small error in the format sort, caused oxml to sometimes be skipped in processing.
  - [GENERIC_LINUX input] Added a small extra eval sentence.
  - [LS_QUARANTINE] Fixed a minor bug in the get_time routine, if a database occurs it is caught by an eval sentence.
  - [TEST] Added few more tests.
  - [MOST INPUT MODULES] Changed the line:
          my $line = <$fh> or return undef;
      in most input modules.
  - [WIN library] Added few more transformations of Windows stored time zones into a "olson" ones understood by DateTime.
  - [CHROME input] Fixed a small unicode bug in the "File Downloaded" section.

Version 0.64 (11/06/2012)
  - [TESTSUITE] Added the first version of a test suite to the tool.
      - All tests are located inside the t/ directory.
      - Tests should be constructed for ALL possible uses of the tool, not limited to:
          - Raw parsing of logs using input modules.
          - Correct output for output modules.
          - Correct output from each function inside modules/libraries.
      - The first TEST suite is raw and not nearly complete, needs loads of stuff to be 'proper' but it is a start.
  - [LS_QUARANTINE input] A new input module that parses the LSQuarantineEvents SQLite db in Mac OS X.
  - [Log2Timeline library] Added the possibility to use a dot (.) in the exclusion list.
      - Changed the exclusion list so it can be easily changed
      - Added a call to ->end on each input module if verification failed.
      - Minor bug fixes in the main engine.
      - Changed wording when an output module is loaded (from "Loading output file" to "Loading output module").
      - Added support to detect shortcuts in Windows systems.
      - Added the "path_orig" to all input modules (making it possible to "fix" paths).